fixed left menu mobile overflow issue

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -58,7 +58,6 @@ $left-width: 45vw;
         @include breakpoint(tablet) {
             bottom: 0;
             opacity: 1;
-            width: 100%;
         }
 
 
