--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -285,6 +285,7 @@ $leftmenu-size: 35vw;
 }
 
 .cbp-spmenu-push-toright {
+    position: fixed;
     @include breakpoint(mobileonly) {
         left: $mobilemenu-size;
     }
@@ -301,6 +302,7 @@ $leftmenu-size: 35vw;
 }
 
 .cbp-spmenu-push-toleft {
+    position: fixed;
     @include breakpoint(mobileonly) {
         left: -$mobilemenu-size;
     }
